# remoll_polar

./: CMakeLists.txt  README  mapsorter.cc  pullgitinfo.py  remoll.cc  rootlogon.C  test  variables.txt
geometry_pvdis/: README  backgems.gdml  cerenkov.gdml  cerenkov_orig.gdml  cerhelp.py  ecal.gdml  ecal_blocker.gdml  ecal_noPS.gdml  ecal_noPS_blocker.gdml  ecal_orig.gdml  gembaffles.gdml  gembaffles_5cm_inner.gdml  gembaffles_babarmore1.gdml  genbackgems.py  gencerenkov.py  genecal.py  gengembaffles.py  gengembaffles_babarmore1.py  solenoid.gdml  solenoid_krypto.gdml  solid_pvdis.gdml  solid_pvdis_krypto.gdml  target.gdml  target_C.gdml  target_Ca.gdml  target_krypto.gdml  target_pb.gdml
hydro_moeller_fieldmap_model/: SolenoidFieldmap.info  ordered_old_file.dat.xlsx  phi_component.C  r_component.C  z_component.C
include/: remollBeamTarget.hh  remollCalDetector.hh  remollCalDetectorSum.hh  remollDetectorConstruction.hh  remollDipoleField.hh  remollEvent.hh  remollGenBeam.hh  remollGenDIS.hh  remollGenFlat.hh  remollGenHighZDIS.hh  remollGenMoller.hh  remollGenPion.hh  remollGenUniformPion.hh  remollGenericDetector.hh  remollGenericDetectorHit.hh  remollGenpInelastic.hh  remollGlobalField.hh  remollIO.hh  remollMagneticField.hh  remollMessenger.hh  remollPhysicsList.hh  remollQuadField.hh  remollSteppingAction.hh  remollVEventGen.hh  remollglobs.hh
macros/: create_macfiles  handler.sh  magtest.mac  merger.sh  run_beam_e_1.mac  runexample.mac  runscript.sh  submit_ifarm_job_remoll_solid.xml  submit_xml_jobs.sh  vis.mac
scripts/: mapdisplay.cc  mapeditor.sh  mapsorter.cc  plot_main.C  sort  symmapdisplay.cc
src/: remollBeamTarget.cc  remollCalDetector.cc  remollCalDetectorSum.cc  remollDetectorConstruction.cc  remollDipoleField.cc  remollEvent.cc  remollEventAction.cc  remollGenBeam.cc  remollGenDIS.cc  remollGenFlat.cc  remollGenHighZDIS.cc  remollGenMoller.cc  remollGenPion.cc  remollGenUniformPion.cc  remollGenericDetector.cc  remollGenericDetectorHit.cc  remollGenpElastic.cc  remollGenpInelastic.cc  remollGlobalField.cc  remollIO.cc  remollMagneticField.cc  remollMessenger.cc  remollMultScatt.cc  remollOpticalPhysics.cc  remollPhysicsList.cc  remollPrimaryGeneratorAction.cc  remollQuadField.cc  remollSteppingAction.cc  remollVEventGen.cc  remollVertex.cc
vis/: vis.mac
